<resources>
    <string name="app_name">Converter</string>
    <string name="heading">Temperature Converter</string>
    <string name="conversion">Conversion: </string>
    <string name="celsiusToFahrenheit">Celsius to Fahrenheit</string>
    <string name="fahrenheitToCelsius">Fahrenheit to Celsius</string>
    <string name="inputText"> </string>
    <string name="convert">Convert</string>
    <string name="equals">=</string>
    <string name="enter">Enter Temp</string>
</resources>